tests/invalid/syntax/double_effect.nyx
// Invalid: Multiple effect markers
func!! double_effect() -> ok
    pass
